--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
+/* Desktops and laptops ----------- */
 .App {
-  text-align: center;
+  background: url('./media/images/Pattern.png');
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .App {
+    height: 100%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Smartphones (landscape) ----------- */
+@media only screen and (min-width: 321px) {
+  .App {
+    height: 100%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width: 320px) {
+  .App {
+    height: 100%;
+  }
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .App {
+    height: 100%;
+  }
+
+  .App-header {
+    width: 100%;
+
+  }
+}
+
+/* iPads (landscape) ----------- */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  .App {
+    height: 100%;
+  }
+
+  .App-header {
+    width: 100%;
+
+  }
+}
+
+/* iPads (portrait) ----------- */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1180px) and (orientation: portrait) {
+  .App {
+    height: 100%;
+  }
+
+  .App-header {
+    width: 100%;
+
+  }
+}
+@media only screen and (min-width: 1224px) {
+  .App {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
